force-app/main/default/objects/tc9_edc__Setup_Schedule_Shift_Allocation__mdt/tc9_edc__Setup_Schedule_Shift_Allocation__mdt.object-meta.xml
<CustomObject>
    <label>Setup Schedule Shift Allocation</label>
    <pluralLabel>Setup Schedule Shift Allocations</pluralLabel>
</CustomObject>