force-app/main/default/objects/tc9_edc__Setup_Schedule_Shift_Allocation__mdt/fields/tc9_edc__Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Day_of_the_Week__c</fullName>
    <label>Day of the Week</label>
    <length>18</length>
    <type>Text</type>
</CustomField>