force-app/main/default/objects/tc9_edc__Setup_Schedule_Shift_Allocation__mdt/fields/tc9_edc__Shift_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Shift_Record__c</fullName>
    <label>Shift Record</label>
    <length>80</length>
    <type>Text</type>
</CustomField>