force-app/main/default/objects/tc9_edc__Setup_Schedule_Shift_Allocation__mdt/fields/tc9_edc__Week_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Week_Number__c</fullName>
    <label>Week Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>